--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">sinemo</string>
-    <string name="screen_lazy_list">Lazy List</string>
-    <string name="screen_main">Main Screen</string>
+    <string name="screen_lazy_list">History</string>
+    <string name="screen_main">Home</string>
 </resources>
