--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">sinEmo</string>
     <string name="screen_lazy_list">History</string>
     <string name="screen_main">Home</string>
+    <string name="screen_perm">Permissions</string>
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
